components/testimonials/styles/testimonials.css
.testimonials-box {
  background-color:#fff;
  padding:30px;
  position:relative;
  height: 50%;
  align-content: center;
}

.testimonial-info {
  height: 50%;
  display: flex;
  flex-direction: column;
}

.testimonials-box:after {
  border:15px solid transparent;
  border-top-color:#fff;
  border-width:39px 47px;
  bottom:-78px;
  content:"";
  height:0;
  left:70%;
  position:absolute;
  width:0;
}

.user-image img {
  border-radius:50%;
}

